--- a/gemey/Css/Style.css
+++ b/gemey/Css/Style.css
@@ -15,13 +15,19 @@
     height: 646px;
     border-radius: 50%;
 }
-
+.divCenter {
+    background-image: url(../img/centerorbit.png);
+    position: absolute;
+    z-index: 1;
+    background-position-x: -602PX;
+    BACKGROUND-POSITION-Y: -473px;
+    width: 100%;
+    height: 100%;
+}
 .healthcircle {
     background-color: greenyellow;
     box-shadow: 0px 0px 7px greenyellow;
     position:absolute;  /*GM*/
-
-    margin: 7px;
     display: inline-block;
     width: 24px;
     height: 24px;
