--- a/20161216_JS_Project_Moustafa/Css/Style.css
+++ b/20161216_JS_Project_Moustafa/Css/Style.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
     background-color: #093d5b;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -368,3 +368,143 @@
                     border-radius: 50%;
                     box-shadow: inset 0 0 9px #aa0001, 0px 0px 3px 3px #9f001d;
                 }
+
+
+.btnPlayerOut {
+    position: absolute;
+    top: 70%;
+    left: 133%;
+    background-color: transparent;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 3px 6px #e311e2;
+    animation: rotation 7000s linear infinite alternate;
+}
+
+    .btnPlayerOut::before {
+        content: "";
+        position: absolute;
+        top: -7px;
+        left: 35px;
+        width: 30%;
+        height: 114%;
+        background-color: #093d5b;
+    }
+
+    .btnPlayerOut::after {
+        content: "";
+        position: absolute;
+        top: -7px;
+        left: 35px;
+        width: 30%;
+        height: 114%;
+        background-color: #093d5b;
+        -webkit-transform: rotate(90deg);
+        -moz-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        -o-transform: rotate(90deg);
+    }
+
+    .btnPlayerOut > .btnPlayerIn {
+        position: absolute;
+        top: 13%;
+        left: 13%;
+        background-color: transparent;
+        width: 74px;
+        height: 74px;
+        border-radius: 50%;
+        z-index: 1;
+        box-shadow: 0px 0px 3px 6px #e311e2;
+    }
+
+.myshap {
+    position: absolute;
+    top: 62%;
+    left: 59%;
+    width: 35px;
+    height: 35px;
+    background-color: #6b1b1b;
+    border-radius: 3px;
+    animation: rotation 7s linear infinite alternate;
+}
+
+.myshap::before {
+        content: "";
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        background-color: #f1f1f1;
+        border-radius: 3px;
+        -webkit-transform: rotate(60deg);
+        -moz-transform: rotate(60deg);
+        -ms-transform: rotate(60deg);
+        -o-transform: rotate(60deg);
+    }
+
+.myshap::after {
+        content: "";
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        background-color: #555555;
+        border-radius: 3px;
+        -webkit-transform: rotate(30deg);
+        -moz-transform: rotate(30deg);
+        -ms-transform: rotate(30deg);
+        -o-transform: rotate(30deg);
+    }
+
+.myshapcon {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 21px;
+    height: 21px;
+    border: 7px double #f1f1f1;
+    border-radius: 27%;
+    z-index: 1;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(13deg);
+    -ms-transform: rotate(13deg);
+    -o-transform: rotate(13deg);
+}
+
+.myshapcon::before {
+        content: "";
+        position: absolute;
+        top: 3px;
+        left: 3px;
+        width: 15px;
+        height: 15px;
+        /*background-color: #6b1b1b;*/
+        background: -webkit-repeating-radial-gradient(#6b1b1b, #f1f1f1 10%, #555555 15%); /* For Safari 5.1 to 6.0 */
+        background: -o-repeating-radial-gradient(#6b1b1b, #f1f1f1 10%, #555555 15%); /* For Opera 11.6 to 12.0 */
+        background: -moz-repeating-radial-gradient(#6b1b1b, #f1f1f1 10%, #555555 15%); /* For Firefox 3.6 to 15 */
+        background: repeating-radial-gradient(#6b1b1b, #f1f1f1 10%, #555555 15%); /* Standard syntax (must be last) */
+        border-radius: 27%;
+        z-index:1;
+        -webkit-transform: rotate(60deg);
+        -moz-transform: rotate(60deg);
+        -ms-transform: rotate(60deg);
+        -o-transform: rotate(60deg);
+    }
+
+.myshapcon::after {
+        content: "";
+        position: absolute;
+        top: 1px;
+        left: 1px;
+        width: 19px;
+        height: 19px;
+        background-color: #f1f1f1;
+        border-radius: 27%;
+        -webkit-transform: rotate(30deg);
+        -moz-transform: rotate(30deg);
+        -ms-transform: rotate(30deg);
+        -o-transform: rotate(30deg);
+    }
